Memory game functionality

--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/html-closing-bracket-newline": ["error", {
+        "singleline": "never",
+        "multiline": "never"
+      }]
+    }
   },
   "browserslist": [
     "> 1%",
